@@ -259,6 +259,9 @@
 #define DCIDESC_AGENT_LOCALDB_TOTAL_QUERIES       _T("Agent local database: total queries executed")
 #define DCIDESC_AGENT_LOG_STATUS                  _T("Agent log status")
 #define DCIDESC_AGENT_PROCESSEDREQUESTS           _T("Number of requests processed by agent")
+#define DCIDESC_AGENT_PROXY_ACTIVESESSIONS        _T("Number of active proxy sessions")
+#define DCIDESC_AGENT_PROXY_CONNECTIONREQUESTS    _T("Number of proxy connection requests")
+#define DCIDESC_AGENT_PROXY_ISENABLED             _T("Check if agent proxy is enabled")
 #define DCIDESC_AGENT_REGISTRAR                   _T("Registrar server address set on agent startup")
 #define DCIDESC_AGENT_REJECTEDCONNECTIONS         _T("Number of connections rejected by agent")
 #define DCIDESC_AGENT_SENT_TRAPS                  _T("Number of traps successfully sent to server")
